# QCES_data_assimilation

./: README.md  nn.ipynb  pyproject.toml
data_assimilation/pendulum/: __init__.py  core.py
data_assimilation/pendulum/single/: visualisation.py
lectures/: lecture1.ipynb  lecture2.ipynb
practicals/: practical1.ipynb  practical2.ipynb
