[project]
name = "data-assimilation"
version = "0.1.0"
description = "A simple library to accompany my part of the QCES Climate Data option"
authors = [
    {name = "David Al-Attar",email = "da380@cam.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scipy (>=1.16.1,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "pyqt6 (>=6.9.1,<7.0.0)",
    "pygeoinf (>=1.4.1,<2.0.0)",
]

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.2.1"
snakeviz = "^2.2.2"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
